--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>About TechCon</h1>
+        <h1>About TechCon 2024</h1>
         <nav>
             <ul>
                 <li><a href="/TechCon_HTML/techcon_website/index.html">Home</a></li>
@@ -44,3 +44,4 @@
     </footer>
 </body>
 </html>
+
