created the about file

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>About TechCon</h1>
+        <h1>About TechCon 2024</h1>
         <nav>
             <ul>
                 <li><a href="/TechCon_HTML/techcon_website/index.html">Home</a></li>
@@ -30,7 +30,7 @@
         <article>
           <h2>Team</h2>
           <p>Our team consists of passionate individuals from diverse backgrounds, all dedicated to making TechCon a success.</p>
-          <img src="/img/IMG_0121.jpg" alt="   Speaker Picture" style="width:300px;height:auto;">
+          <img src="/img/IMG_0121.jpg" alt="Past Speakers" style="width:300px;height:auto;">
        </article>
     </main>
     <footer>
