created the schedule file

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -40,9 +40,7 @@
                 <td>Cybersecurity Trends</td>
                 <td>Emily Johnson</td>
             </tr>
-            <caption>
-                <strong>Note:</strong> Schedule is subject to change.
-            </caption>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
         </table>
     </main>
     <footer>
