created the schedule file

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -50,7 +50,7 @@
             <li><a href="/techcon_website/register.html">Register</a></li>
             <li><a href="/techcon_website/contact.html">Contact</a></li>
         </ul>
-        <p>&copy; 2023 TechCon. All rights reserved.</p>
+        <p>&copy; Copyright 2023 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
