--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Contact Us - TechCon 2024</h1>
+        <h1>Contact Us </h1>
         <nav>
             <ul>
                 <li><a href="/techcon_website/index.html">Home</a></li>
@@ -21,7 +21,7 @@
         <h2>Get in Touch</h2>
         <p>If you have any questions or need further information, please feel free to reach out to us:</p>
         <ul>
-            <li>Email: <a href="mailto:info@techcon.com">info@techcon.com</a></li>
+            <li>Email: <a href="mailto:info@techcon.com" target="_blank">info@techcon.com</a></li>
         </ul>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509949!2d144.9537353153165!3d-37.81627997975157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11f5b5%3A0x5045675218ceed30!2sTechCon%202024!5e0!3m2!1sen!2sau!4v1616161616161!5m2!1sen!2sau" frameborder="0"></iframe>
         <p>Address: 123 Tech Street, Innovation City, Country</p>
