--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -10,10 +10,10 @@
         <h1>About TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href="/TechCon_HTML/techcon_website/index.html">Home</a></li>
-                <li><a href="/TechCon_HTML/techcon_website/schedule.html">Schedule</a></li>
-                <li><a href="/TechCon_HTML/techcon_website/register.html">Register</a></li>
-                <li><a href="/TechCon_HTML/techcon_website/contact.html">Contact</a></li>
+                <li><a href="/techcon_website/index.html">Home</a></li>
+                <li><a href="/techcon_website/schedule.html">Schedule</a></li>
+                <li><a href="/techcon_website/register.html">Register</a></li>
+                <li><a href="/techcon_website/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
